--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    implementation('org.springframework.boot:spring-boot-stater-mustache')
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
     implementation('org.webjars.bower:jquery:3.3.1')
     implementation('org.webjars:sockjs-client:1.1.2')
-    implementation('org.webjars:webjar-locator:0.30')
+    implementation('org.webjars:webjars-locator:0.30')
 }
 
 test {
